Squashed commit of the following:
commit af19d2aa593a4b4b068a5bc3707d74378625d774
Author: Christian Klinger <spam@klinch.de>
Date:   Wed Jul 13 12:32:17 2016 +0200

    added sorting functionality.

commit 0030ebebb49bad18fba8e74184d331be5485ed4e
Author: Christian Klinger <spam@klinch.de>
Date:   Fri Jul 8 16:09:16 2016 +0200

    small improvements.

commit 8dc5ee1173ffbc6e689f3197ad4d1ecf700a9374
Author: Christian Klinger <spam@klinch.de>
Date:   Fri Jul 8 12:49:29 2016 +0200

    added location fiter.

commit 63a2da244a6def5cdd76c654bd5a6a0c108cc47b
Author: Christian Klinger <spam@klinch.de>
Date:   Fri Jul 8 12:25:15 2016 +0200

    most filters should work.

commit 847536b34cec0194c58cb41a17006a8bd88f748d
Author: Christian Klinger <spam@klinch.de>
Date:   Tue Jul 5 15:57:38 2016 +0200

    rudimentary filter options.

--- a/modules-available/locations/templates/location-subnets.html
+++ b/modules-available/locations/templates/location-subnets.html
@@ -70,7 +70,7 @@
 		{{/haveDozmod}}
 		{{#haveStatistics}}
 		<div>
-			<span class="slx-ga2">{{lang_matchingMachines}}:</span> <a href="?do=Statistics&amp;filter=location&amp;argument={{locationid}}">{{machines}} / {{machines_online}} / {{machines_used}} ({{used_percent}}%)</a>
+			<span class="slx-ga2">{{lang_matchingMachines}}:</span> <a href="?do=Statistics&amp;show=list&amp;filters=location={{locationid}}">{{machines}} / {{machines_online}} / {{machines_used}} ({{used_percent}}%)</a>
 		</div>
 		{{/haveStatistics}}
 	</form>
