--- a/modules-available/statistics/templates/id44.html
+++ b/modules-available/statistics/templates/id44.html
@@ -13,7 +13,7 @@
 						</tr>
 						{{#rows}}
 						<tr id="tmpid{{gb}}" class="{{class}}">
-							<td class="text-left slx-nowrap"><a href="?do=Statistics&amp;filter=hddgb&amp;argument={{gb}}">{{gb}}&thinsp;GiB</td>
+							<td class="text-left slx-nowrap"><a href="?do=Statistics&amp;show=list&amp;filters=hddgb={{gb}}">{{gb}}&thinsp;GiB</td>
 							<td class="text-right">{{count}}</td>
 						</tr>
 						{{/rows}}
