--- a/modules-available/statistics/templates/memory.html
+++ b/modules-available/statistics/templates/memory.html
@@ -13,7 +13,7 @@
 						</tr>
 						{{#rows}}
 						<tr id="ramid{{gb}}" class="{{class}}">
-							<td class="text-left slx-nowrap"><a href="?do=Statistics&amp;filter=gbram&amp;argument={{gb}}">{{gb}}&thinsp;GiB</a></td>
+							<td class="text-left slx-nowrap"><a href="?do=Statistics&amp;show=list&amp;filters=gbram={{gb}}">{{gb}}&thinsp;GiB</a></td>
 							<td class="text-right">{{count}}</td>
 						</tr>
 						{{/rows}}
