Added extra cancel buttons.

--- a/modules-available/sysconfig/templates/start.html
+++ b/modules-available/sysconfig/templates/start.html
@@ -10,3 +10,6 @@
 	</div>
 </div>
 {{/modules}}
+<div class="btn-group">
+	<a class="btn btn-default" href="?do=SysConfig">{{lang_cancel}}</a>
+</div>
