--- a/modules-available/sysconfig/templates/cfg-start.html
+++ b/modules-available/sysconfig/templates/cfg-start.html
@@ -33,7 +33,10 @@
 			</div>
 		</div>
 	{{/groups}}
-	<div class="pull-right">
+	<div class="btn-group">
+		<a href="?do=SysConfig" class="btn btn-default">{{lang_cancel}}</a>
+	</div>
+	<div class="btn-group pull-right">
 		<button type="submit" class="btn btn-primary">{{lang_next}} &raquo;</button>
 	</div>
 </form>
