--- a/modules-available/statistics/templates/kvmstate.html
+++ b/modules-available/statistics/templates/kvmstate.html
@@ -6,14 +6,16 @@
 		<div class="panel-body">
 			<div class="row">
 				<div class="col-sm-6">
-					<table class="table table-condensed table-striped">
+					<table class="filter-col table table-condensed table-striped" data-filter-col="kvmstate">
 						<tr>
 							<th>{{lang_kvmState}}</th>
 							<th class="text-right">{{lang_machineCount}}</th>
 						</tr>
 						{{#rows}}
 						<tr id="kvm{{kvmstate}}">
-							<td class="text-left slx-nowrap"><a href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~kvmstate={{kvmstate}}">{{kvmstate}}</a></td>
+							<td class="text-left slx-nowrap">
+								<a class="filter-val" data-filter-val="{{kvmstate}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~kvmstate={{kvmstate}}">{{kvmstate}}</a>
+							</td>
 							<td class="text-right">{{count}}</td>
 						</tr>
 						{{/rows}}
