--- a/modules-available/statistics/templates/memory.html
+++ b/modules-available/statistics/templates/memory.html
@@ -6,14 +6,16 @@
 		<div class="panel-body">
 			<div class="row">
 				<div class="col-sm-6">
-					<table class="table table-condensed table-striped">
+					<table class="filter-col table table-condensed table-striped" data-filter-col="gbram">
 						<tr>
 							<th>{{lang_ramSize}}</th>
 							<th class="text-right">{{lang_machineCount}}</th>
 						</tr>
 						{{#rows}}
 						<tr id="ramid{{gb}}" class="{{class}}">
-							<td class="text-left slx-nowrap"><a href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~gbram={{gb}}">{{gb}}&thinsp;GiB</a></td>
+							<td class="text-left slx-nowrap">
+								<a class="filter-val" data-filter-val="{{gb}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~gbram={{gb}}">{{gb}}&thinsp;GiB</a>
+							</td>
 							<td class="text-right">{{count}}</td>
 						</tr>
 						{{/rows}}
